@@ -1,4 +1,5 @@
 0.02
+ - Fix license SPDX string in test.
  - Regen example.
 
 0.01 2023-01-27T17:52:51+01:00
